--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -1062,6 +1062,12 @@
  	 	 	 	 	"eng": "Amadon"
  	 	 	 	}
  	 	 	},
+ 	 	 	"stallShortcut": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Mein Stand",
+ 	 	 	 	 	"eng": "My Stall"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"abortWarningTitle": {
  	 	 	 	"trans": "Bist du sicher, dass du Abbrechen willst?",
  	 	 	 	"eng": "Are you sure you want to abort?"
@@ -1256,7 +1262,7 @@
  	 	},
  	 	"tutorial": {
  	 	 	"title": {
- 	 	 	 	"trans": "Tutorial",
+ 	 	 	 	"trans": "Lernprogramm",
  	 	 	 	"eng": "Tutorial"
  	 	 	}
  	 	},
@@ -1866,6 +1872,14 @@
  	 	 	 	"subTitle": {
  	 	 	 	 	"trans": "Bitte setze den Kalibrierungskern ein",
  	 	 	 	 	"eng": "Please insert Calibration Core"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Sie müssen den Kalibrierungskern einfügen, um Ihre Geräte zu verbessern.",
+ 	 	 	 	 	"eng": "You need to insert Calibration Core to upgrade your equipment."
+ 	 	 	 	},
+ 	 	 	 	"noCore": {
+ 	 	 	 	 	"trans": "Sie haben keinen Kalibrierungskern",
+ 	 	 	 	 	"eng": "You don\\'t have any Calibration Core"
  	 	 	 	}
  	 	 	},
  	 	 	"activate": {
@@ -1997,6 +2011,10 @@
  	 	 	"subTitle": {
  	 	 	 	"trans": "Sammle Caches von Feinden und aus Dungeons um dir neue Waffen und Rüstungen zu drucken.",
  	 	 	 	"eng": "gather the caches from enemies and dungeons to print your new weapons and armor"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Klicken Sie hier, um mehr über den molekularen Drucker zu erfahren",
+ 	 	 	 	"eng": "Click here to learn more about the Molecular Printer"
  	 	 	}
  	 	},
  	 	"unit": {
@@ -2015,6 +2033,20 @@
  	 	 	"autoSell": {
  	 	 	 	"trans": "Automatischer Verkauf",
  	 	 	 	"eng": "Auto Sell"
+ 	 	 	}
+ 	 	},
+ 	 	"myStallPage": {
+ 	 	 	"remove": {
+ 	 	 	 	"trans": "Löschen",
+ 	 	 	 	"eng": "remove"
+ 	 	 	},
+ 	 	 	"notIdle": {
+ 	 	 	 	"trans": "Sie müssen untätig sein, um diese Aktion auszuführen",
+ 	 	 	 	"eng": "You must be idle to do this action"
+ 	 	 	},
+ 	 	 	"noItem": {
+ 	 	 	 	"trans": "Sie haben keinen Artikel zum Verkauf",
+ 	 	 	 	"eng": " You current don't have any item on sale"
  	 	 	}
  	 	},
  	 	"register": {
@@ -2207,7 +2239,7 @@
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Kooperationskapazität",
- 	 	 	"eng": "Collaboration Capacity"
+ 	 	 	"eng": "Calibration Capacity"
  	 	},
  	 	"globalEffects": {
  	 	 	"trans": "Globale Effekte",
@@ -3129,8 +3161,16 @@
  	 	 	"trans": "Prestige",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation8": {
+ 	 	 	"trans": "Prestige",
+ 	 	 	"eng": "Prestige"
+ 	 	},
+ 	 	"donation9": {
+ 	 	 	"trans": "Prestige",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
- 	 	 	"trans": "Moderator",
+ 	 	 	"trans": "Moderatorin",
  	 	 	"eng": "Moderator"
  	 	},
  	 	"admin": {
@@ -3387,6 +3427,86 @@
  	 	 	 	},
  	 	 	 	"9": {
  	 	 	 	 	"trans": "Weiteres in zukünftigen Updates enthalten",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation8": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "\"Prestige\" Spendenentitel",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Entsperren Sie die Anpassung der Profil Bild",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Orange Neon Chat Frame (mit Animation)",
+ 	 	 	 	 	"eng": "Orange Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Orange Neon gerahmtes Profil (mit Animation)",
+ 	 	 	 	 	"eng": "Orange Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Sperrs Bio -Biografie entsperren",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Barcode -Dekoration im Profil",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Passen Sie das Gangmotto an",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Bandenbild anpassen",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Mehr in zukünftiges Update kommen",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation9": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "\"Prestige\" Spendenentitel",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Entsperren Sie die Anpassung der Profil Bild",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Pink Neon Chat Frame (mit Animation)",
+ 	 	 	 	 	"eng": "Pink Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Pink Neon gerahmtes Profil (mit Animation)",
+ 	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Sperrs Bio -Biografie entsperren",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Barcode -Dekoration im Profil",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Passen Sie das Gangmotto an",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Bandenbild anpassen",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Mehr in zukünftiges Update kommen",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -4674,7 +4794,7 @@
  	"npcGangs": {
  	 	"gang1": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Animals",
+ 	 	 	 	"trans": "Tiere",
  	 	 	 	"eng": "Animals"
  	 	 	}
  	 	},
@@ -4686,7 +4806,7 @@
  	 	},
  	 	"gang3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Scavengers",
+ 	 	 	 	"trans": "Aasfresser",
  	 	 	 	"eng": "Scavengers"
  	 	 	}
  	 	}
