--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -689,7 +689,7 @@
  	 	 	},
  	 	 	"printCacheDescription": {
  	 	 	 	"trans": "Convierte esta caché en un arma o equipamiento que puedas usar.",
- 	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can use."
+ 	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can uae."
  	 	 	}
  	 	},
  	 	"itemDetails": {
@@ -775,7 +775,7 @@
  	 	 	 	 	"repairFee"
  	 	 	 	],
  	 	 	 	"trans": "Reparar todos los objetos por (${repairFee} BTC)",
- 	 	 	 	"eng": "Repair all items for (${repairFee} Bitcoin)"
+ 	 	 	 	"eng": " Repair all items for (${repairFee} Bitcoin)"
  	 	 	},
  	 	 	"molecularPrinter": {
  	 	 	 	"printLevelDisplay": {
@@ -1062,6 +1062,12 @@
  	 	 	 	 	"eng": "Amadon"
  	 	 	 	}
  	 	 	},
+ 	 	 	"stallShortcut": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Mi puesto",
+ 	 	 	 	 	"eng": "My Stall"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"abortWarningTitle": {
  	 	 	 	"trans": "¿Deseas abortar?",
  	 	 	 	"eng": "Are you sure you want to abort?"
@@ -1145,7 +1151,7 @@
  	 	 	 	 	},
  	 	 	 	 	"description": {
  	 	 	 	 	 	"trans": "Puedes obtener Núcleos de IA: \r\n        - Hurgando en varios lugares.\r\n        - Fabricándolos con Procesadores Hash y Restos Tecnológicos.\r\n        - Saqueando enemigos de todas las ubicaciones.",
- 	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations.\r\n        - Crafting with Hash Processors and Tech Scraps.\r\n        - Looting from enemies in all locations."
+ 	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"common": {
@@ -1866,6 +1872,14 @@
  	 	 	 	"subTitle": {
  	 	 	 	 	"trans": "Por favor inserte un Núcleo de Calibración",
  	 	 	 	 	"eng": "Please insert Calibration Core"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Debe insertar el núcleo de calibración para actualizar su equipo.",
+ 	 	 	 	 	"eng": "You need to insert Calibration Core to upgrade your equipment."
+ 	 	 	 	},
+ 	 	 	 	"noCore": {
+ 	 	 	 	 	"trans": "No tienes ningún núcleo de calibración",
+ 	 	 	 	 	"eng": "You don\\'t have any Calibration Core"
  	 	 	 	}
  	 	 	},
  	 	 	"activate": {
@@ -1997,6 +2011,10 @@
  	 	 	"subTitle": {
  	 	 	 	"trans": "Consigue cachés de los enemigos y Mazmorras para imprimir nuevas armas y armaduras",
  	 	 	 	"eng": "gather the caches from enemies and dungeons to print your new weapons and armor"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Haga clic aquí para obtener más información sobre la impresora molecular",
+ 	 	 	 	"eng": "Click here to learn more about the Molecular Printer"
  	 	 	}
  	 	},
  	 	"unit": {
@@ -2015,6 +2033,20 @@
  	 	 	"autoSell": {
  	 	 	 	"trans": "Vender Automáticamente",
  	 	 	 	"eng": "Auto Sell"
+ 	 	 	}
+ 	 	},
+ 	 	"myStallPage": {
+ 	 	 	"remove": {
+ 	 	 	 	"trans": "retirar",
+ 	 	 	 	"eng": "remove"
+ 	 	 	},
+ 	 	 	"notIdle": {
+ 	 	 	 	"trans": "Debes estar inactivo para hacer esta acción",
+ 	 	 	 	"eng": "You must be idle to do this action"
+ 	 	 	},
+ 	 	 	"noItem": {
+ 	 	 	 	"trans": "Usted actual no tiene ningún artículo a la venta",
+ 	 	 	 	"eng": " You current don't have any item on sale"
  	 	 	}
  	 	},
  	 	"register": {
@@ -2207,7 +2239,7 @@
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Capacidad de Colaboración",
- 	 	 	"eng": "Collaboration Capacity"
+ 	 	 	"eng": "Calibration Capacity"
  	 	},
  	 	"globalEffects": {
  	 	 	"trans": "Efectos Globales",
@@ -3129,6 +3161,14 @@
  	 	 	"trans": "Prestigio",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation8": {
+ 	 	 	"trans": "Prestigio",
+ 	 	 	"eng": "Prestige"
+ 	 	},
+ 	 	"donation9": {
+ 	 	 	"trans": "Prestigio",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderador",
  	 	 	"eng": "Moderator"
@@ -3179,7 +3219,7 @@
  	 	 	"benefits": {
  	 	 	 	"1": {
  	 	 	 	 	"trans": "Título de donación \"Elite\"",
- 	 	 	 	 	"eng": "\"Elite\" do nation title"
+ 	 	 	 	 	"eng": "\"Elite\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
  	 	 	 	 	"trans": "Desbloquear Foto de Perfil personalizada",
@@ -3368,6 +3408,86 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "Perfil enmarcado de neón púrpura (con animación)",
  	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Desbloquear biografía personalizada",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Decoración de código de barras en el perfil",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Personalizar el lema de pandillas",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Personalizar la imagen de las pandillas",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Más llegando en la actualización futura",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation8": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Título de la donación de \"prestigio\"",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Desbloquear la personalización de la imagen del perfil",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Marco de chat de neón naranja (con animación)",
+ 	 	 	 	 	"eng": "Orange Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Perfil enmarcado de neón naranja (con animación)",
+ 	 	 	 	 	"eng": "Orange Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Desbloquear biografía personalizada",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Decoración de código de barras en el perfil",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Personalizar el lema de pandillas",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Personalizar la imagen de las pandillas",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Más llegando en la actualización futura",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation9": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Título de la donación de \"prestigio\"",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Desbloquear la personalización de la imagen del perfil",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Marco de chat de neón rosa (con animación)",
+ 	 	 	 	 	"eng": "Pink Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Perfil enmarcado de neón rosa (con animación)",
+ 	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Desbloquear biografía personalizada",
@@ -3579,7 +3699,7 @@
  	 	},
  	 	"healing1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Pain Away",
+ 	 	 	 	"trans": "Dolor",
  	 	 	 	"eng": "Pain Away"
  	 	 	},
  	 	 	"description": {
