--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -1062,6 +1062,12 @@
  	 	 	 	 	"eng": "Amadon"
  	 	 	 	}
  	 	 	},
+ 	 	 	"stallShortcut": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "La mia stalla",
+ 	 	 	 	 	"eng": "My Stall"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"abortWarningTitle": {
  	 	 	 	"trans": "Sei sicuro di voler annullare?",
  	 	 	 	"eng": "Are you sure you want to abort?"
@@ -1866,6 +1872,14 @@
  	 	 	 	"subTitle": {
  	 	 	 	 	"trans": "Si prega di inserire il nucleo di calibrazione",
  	 	 	 	 	"eng": "Please insert Calibration Core"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "È necessario inserire il nucleo di calibrazione per aggiornare l'attrezzatura.",
+ 	 	 	 	 	"eng": "You need to insert Calibration Core to upgrade your equipment."
+ 	 	 	 	},
+ 	 	 	 	"noCore": {
+ 	 	 	 	 	"trans": "Non hai un nucleo di calibrazione",
+ 	 	 	 	 	"eng": "You don\\'t have any Calibration Core"
  	 	 	 	}
  	 	 	},
  	 	 	"activate": {
@@ -1997,6 +2011,10 @@
  	 	 	"subTitle": {
  	 	 	 	"trans": "Raccogli le casse da nemici e dungeon per stampare le tue nuove armi e armature",
  	 	 	 	"eng": "gather the caches from enemies and dungeons to print your new weapons and armor"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Clicca qui per saperne di più sulla stampante molecolare",
+ 	 	 	 	"eng": "Click here to learn more about the Molecular Printer"
  	 	 	}
  	 	},
  	 	"unit": {
@@ -2015,6 +2033,20 @@
  	 	 	"autoSell": {
  	 	 	 	"trans": "Auto vendita",
  	 	 	 	"eng": "Auto Sell"
+ 	 	 	}
+ 	 	},
+ 	 	"myStallPage": {
+ 	 	 	"remove": {
+ 	 	 	 	"trans": "rimuovere",
+ 	 	 	 	"eng": "remove"
+ 	 	 	},
+ 	 	 	"notIdle": {
+ 	 	 	 	"trans": "Devi essere inattivo per fare questa azione",
+ 	 	 	 	"eng": "You must be idle to do this action"
+ 	 	 	},
+ 	 	 	"noItem": {
+ 	 	 	 	"trans": "Non hai alcun articolo in vendita",
+ 	 	 	 	"eng": " You current don't have any item on sale"
  	 	 	}
  	 	},
  	 	"register": {
@@ -2207,7 +2239,7 @@
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Capacità di calibrazione",
- 	 	 	"eng": "Collaboration Capacity"
+ 	 	 	"eng": "Calibration Capacity"
  	 	},
  	 	"globalEffects": {
  	 	 	"trans": "Effetti globali",
@@ -3129,6 +3161,14 @@
  	 	 	"trans": "Prestigio",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation8": {
+ 	 	 	"trans": "Prestigio",
+ 	 	 	"eng": "Prestige"
+ 	 	},
+ 	 	"donation9": {
+ 	 	 	"trans": "Prestigio",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderatore",
  	 	 	"eng": "Moderator"
@@ -3368,6 +3408,86 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "Profilo incorniciato neon viola (con animazione)",
  	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Sblocca la biografia personalizzata",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Decorazione del codice a barre sul profilo",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Personalizza il motto di gang",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Personalizza l'immagine della banda",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Altro in arrivo nel futuro aggiornamento",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation8": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Titolo di donazione \"prestigio\"",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Sblocca la personalizzazione dell'immagine del profilo",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Frame di chat al neon arancione (con animazione)",
+ 	 	 	 	 	"eng": "Orange Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Profilo incorniciato arancione al neon (con animazione)",
+ 	 	 	 	 	"eng": "Orange Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Sblocca la biografia personalizzata",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Decorazione del codice a barre sul profilo",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Personalizza il motto di gang",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Personalizza l'immagine della banda",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Altro in arrivo nel futuro aggiornamento",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation9": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Titolo di donazione \"prestigio\"",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Sblocca la personalizzazione dell'immagine del profilo",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Pink Neon Chat Frame (con animazione)",
+ 	 	 	 	 	"eng": "Pink Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Profilo incorniciato al neon rosa (con animazione)",
+ 	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Sblocca la biografia personalizzata",
