--- a/contribution/lang/ro.json
+++ b/contribution/lang/ro.json
@@ -1062,6 +1062,12 @@
  	 	 	 	 	"eng": "Amadon"
  	 	 	 	}
  	 	 	},
+ 	 	 	"stallShortcut": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Standul meu",
+ 	 	 	 	 	"eng": "My Stall"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"abortWarningTitle": {
  	 	 	 	"trans": "Sunteți sigur că doriți să renunțați?",
  	 	 	 	"eng": "Are you sure you want to abort?"
@@ -1866,6 +1872,14 @@
  	 	 	 	"subTitle": {
  	 	 	 	 	"trans": "Te rog inserează Nucleul de Calibrare",
  	 	 	 	 	"eng": "Please insert Calibration Core"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Trebuie să introduceți miez de calibrare pentru a vă actualiza echipamentul.",
+ 	 	 	 	 	"eng": "You need to insert Calibration Core to upgrade your equipment."
+ 	 	 	 	},
+ 	 	 	 	"noCore": {
+ 	 	 	 	 	"trans": "Nu aveți niciun nucleu de calibrare",
+ 	 	 	 	 	"eng": "You don\\'t have any Calibration Core"
  	 	 	 	}
  	 	 	},
  	 	 	"activate": {
@@ -1997,6 +2011,10 @@
  	 	 	"subTitle": {
  	 	 	 	"trans": "obține cache-urile de la inamici și dungeons pentru a-ți printa noile tale arme și armuri",
  	 	 	 	"eng": "gather the caches from enemies and dungeons to print your new weapons and armor"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Faceți clic aici pentru a afla mai multe despre imprimanta moleculară",
+ 	 	 	 	"eng": "Click here to learn more about the Molecular Printer"
  	 	 	}
  	 	},
  	 	"unit": {
@@ -2015,6 +2033,20 @@
  	 	 	"autoSell": {
  	 	 	 	"trans": "Vindem auto",
  	 	 	 	"eng": "Auto Sell"
+ 	 	 	}
+ 	 	},
+ 	 	"myStallPage": {
+ 	 	 	"remove": {
+ 	 	 	 	"trans": "elimina",
+ 	 	 	 	"eng": "remove"
+ 	 	 	},
+ 	 	 	"notIdle": {
+ 	 	 	 	"trans": "Trebuie să fiți inactiv să faceți această acțiune",
+ 	 	 	 	"eng": "You must be idle to do this action"
+ 	 	 	},
+ 	 	 	"noItem": {
+ 	 	 	 	"trans": "Actualul nu aveți niciun articol la vânzare",
+ 	 	 	 	"eng": " You current don't have any item on sale"
  	 	 	}
  	 	},
  	 	"register": {
@@ -2207,7 +2239,7 @@
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Capacitate de Calibrare",
- 	 	 	"eng": "Collaboration Capacity"
+ 	 	 	"eng": "Calibration Capacity"
  	 	},
  	 	"globalEffects": {
  	 	 	"trans": "Efecte Globale",
@@ -3129,6 +3161,14 @@
  	 	 	"trans": "Prestigiu",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation8": {
+ 	 	 	"trans": "Prestigiu",
+ 	 	 	"eng": "Prestige"
+ 	 	},
+ 	 	"donation9": {
+ 	 	 	"trans": "Prestigiu",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderator",
  	 	 	"eng": "Moderator"
@@ -3368,6 +3408,86 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "Profil încadrat de neon violet (cu animație)",
  	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Deblocați bio personalizat",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Decorarea codurilor de bare pe profil",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Personalizați motto -ul bandei",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Personalizați imaginea de bandă",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Mai multe venind în viitoarea actualizare",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation8": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Titlul donației „Prestigiu”",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Deblocați personalizarea imaginii de profil",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Cadru de chat neon portocaliu (cu animație)",
+ 	 	 	 	 	"eng": "Orange Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Profil încadrat de neon portocaliu (cu animație)",
+ 	 	 	 	 	"eng": "Orange Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Deblocați bio personalizat",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Decorarea codurilor de bare pe profil",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Personalizați motto -ul bandei",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Personalizați imaginea de bandă",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Mai multe venind în viitoarea actualizare",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation9": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Titlul donației „Prestigiu”",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Deblocați personalizarea imaginii de profil",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Cadru de chat neon roz (cu animație)",
+ 	 	 	 	 	"eng": "Pink Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Profil încadrat de neon roz (cu animație)",
+ 	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Deblocați bio personalizat",
