--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -1062,6 +1062,12 @@
  	 	 	 	 	"eng": "Amadon"
  	 	 	 	}
  	 	 	},
+ 	 	 	"stallShortcut": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "我的攤位",
+ 	 	 	 	 	"eng": "My Stall"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"abortWarningTitle": {
  	 	 	 	"trans": "你確定要中止嗎？",
  	 	 	 	"eng": "Are you sure you want to abort?"
@@ -1866,6 +1872,14 @@
  	 	 	 	"subTitle": {
  	 	 	 	 	"trans": "請插入校準核心",
  	 	 	 	 	"eng": "Please insert Calibration Core"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "您需要插入校準核心以升級設備。",
+ 	 	 	 	 	"eng": "You need to insert Calibration Core to upgrade your equipment."
+ 	 	 	 	},
+ 	 	 	 	"noCore": {
+ 	 	 	 	 	"trans": "您沒有任何校準核心",
+ 	 	 	 	 	"eng": "You don\\'t have any Calibration Core"
  	 	 	 	}
  	 	 	},
  	 	 	"activate": {
@@ -1997,6 +2011,10 @@
  	 	 	"subTitle": {
  	 	 	 	"trans": "從敵人和地下城中收集快取記憶體來列印你的新裝備",
  	 	 	 	"eng": "gather the caches from enemies and dungeons to print your new weapons and armor"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "單擊此處以了解有關分子打印機的更多信息",
+ 	 	 	 	"eng": "Click here to learn more about the Molecular Printer"
  	 	 	}
  	 	},
  	 	"unit": {
@@ -2015,6 +2033,20 @@
  	 	 	"autoSell": {
  	 	 	 	"trans": "自動販賣",
  	 	 	 	"eng": "Auto Sell"
+ 	 	 	}
+ 	 	},
+ 	 	"myStallPage": {
+ 	 	 	"remove": {
+ 	 	 	 	"trans": "下架",
+ 	 	 	 	"eng": "remove"
+ 	 	 	},
+ 	 	 	"notIdle": {
+ 	 	 	 	"trans": "你現在不可以做這個動作",
+ 	 	 	 	"eng": "You must be idle to do this action"
+ 	 	 	},
+ 	 	 	"noItem": {
+ 	 	 	 	"trans": "您當前沒有任何商品出售",
+ 	 	 	 	"eng": " You current don't have any item on sale"
  	 	 	}
  	 	},
  	 	"register": {
@@ -2207,7 +2239,7 @@
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "校準容量",
- 	 	 	"eng": "Collaboration Capacity"
+ 	 	 	"eng": "Calibration Capacity"
  	 	},
  	 	"globalEffects": {
  	 	 	"trans": "全球效應",
@@ -3129,6 +3161,14 @@
  	 	 	"trans": "至尊",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation8": {
+ 	 	 	"trans": "至尊",
+ 	 	 	"eng": "Prestige"
+ 	 	},
+ 	 	"donation9": {
+ 	 	 	"trans": "至尊",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "聊天管理",
  	 	 	"eng": "Moderator"
@@ -3387,6 +3427,86 @@
  	 	 	 	},
  	 	 	 	"9": {
  	 	 	 	 	"trans": "未來會有更多的更新",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation8": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "“至尊”捐贈標題",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "解鎖個人資料圖片自定義",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "橙色霓虹燈聊天框架（帶有動畫）",
+ 	 	 	 	 	"eng": "Orange Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "橙色霓虹燈構造的個人資料（帶有動畫）",
+ 	 	 	 	 	"eng": "Orange Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "解鎖自訂個人簡歷",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "輪廓上的條形碼裝飾",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "自訂公會座右銘",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "自定義幫派圖像",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "將來更新會有更多",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation9": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "“聲望”捐贈標題",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "解鎖個人資料圖片自定義",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "粉紅色的霓虹燈聊天框架（帶有動畫）",
+ 	 	 	 	 	"eng": "Pink Neon chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "粉紅色的霓虹燈構造的個人資料（帶有動畫）",
+ 	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "解鎖自訂個人簡歷",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "輪廓上的條形碼裝飾",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "定制幫派座右銘",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "自定義幫派圖像",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "將來更新會有更多",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
